Console/I2PSnark: fix off-center placement of radio icon

--- a/installer/resources/themes/snark/light/snark.css
+++ b/installer/resources/themes/snark/light/snark.css
@@ -3038,15 +3038,6 @@ td.commentAuthor .commentAuthorName {
   margin: 2px 20px !important;
 }
 
-input[type="radio"]:checked::before {
-  left: 4px; /* fix weird positional bug */
-  top: 4px;
-}
-
-.optbox:checked, .optbox:disabled, .knownTracker .optbox {
-  background: linear-gradient(to bottom, #fff, #f0f0ff) !important;
-}
-
 #netconfig .optbox {
   vertical-align: middle !important;
 }
